--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.3",
     "cannon": "^0.6.2",
     "connected-react-router": "^6.4.0",
+    "influx": "^5.0.7",
     "react": "^16.8.6",
     "react-babylonjs": "1.0.3",
     "react-dom": "^16.8.6",
