--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-graphql-boilerplate",
   "version": "1.0.0",
-  "description": "A simple no-fuss boilerplate for Koa and Graphql",
+  "description": "A geometry API",
   "main": "app.js",
   "scripts": {
     "test": "test"
@@ -17,12 +17,14 @@
     "@koa/cors": "^2.2.1",
     "async": "^2.6.2",
     "dotenv": "^5.0.1",
-    "graphql": "^0.13.1",
+    "graphql": "^14.2.1",
+    "influx": "^5.0.7",
     "jsonwebtoken": "^8.2.0",
     "koa": "^2.5.0",
     "koa-graphql": "^0.7.5",
     "koa-jwt": "^3.3.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.0.9"
+    "mongoose": "^5.0.9",
+    "objectid": "^3.2.1"
   }
 }
