--- a/ui/package.json
+++ b/ui/package.json
@@ -4,14 +4,18 @@
   "homepage": "https://brianzinn.github.io/create-react-app-typescript-babylonjs",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.3.1",
     "babylonjs": "3.3.0",
     "babylonjs-gui": "3.3.0",
     "babylonjs-loaders": "^3.3.0",
     "bootstrap": "^4.1.3",
     "cannon": "^0.6.2",
     "connected-react-router": "^6.4.0",
+    "graphql": "^14.2.1",
     "influx": "^5.0.7",
+    "path": "^0.12.7",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
     "react-babylonjs": "1.0.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^1.3.1",
