--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^4.1.3",
     "cannon": "^0.6.2",
     "connected-react-router": "^6.4.0",
+    "earcut": "^2.1.5",
     "graphql": "^14.2.1",
     "influx": "^5.0.7",
+    "oimo": "^1.0.9",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
