--- a/api/package.json
+++ b/api/package.json
@@ -22,11 +22,13 @@
     "graphql-iso-date": "^3.6.1",
     "influx": "^5.0.7",
     "jsonwebtoken": "^8.2.0",
+    "kafka-node": "^4.1.1",
     "koa": "^2.5.0",
     "koa-graphql": "^0.7.5",
     "koa-jwt": "^3.3.0",
     "koa-router": "^7.4.0",
     "mongoose": "^5.0.9",
-    "objectid": "^3.2.1"
+    "objectid": "^3.2.1",
+    "quaternion-to-euler": "^0.5.0"
   }
 }
