--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,8 @@ services:
         ZOO_PORT: 2181
         ZOO_SERVERS: server.1=zoo:2888:3888
     volumes:
-      - ./zk-single-kafka-single/zoo/data:/data
-      - ./zk-single-kafka-single/zoo/datalog:/datalog
+      - ./volumes/zoo/data:/data
+      - ./volumes/zoo/datalog:/datalog
 
   kafka:
     image: confluentinc/cp-kafka:5.2.1
@@ -34,7 +34,7 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka:19092,LISTENER_DOCKER_EXTERNAL://10.34.181.103:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zoo:2181"
@@ -42,7 +42,7 @@ services:
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
-      - ./zk-single-kafka-single/kafka/data:/var/lib/kafka/data
+      - ./volumes/kafka/data:/var/lib/kafka/data
     depends_on:
       - zoo
 volumes:
