--- a/ui/package.json
+++ b/ui/package.json
@@ -15,11 +15,13 @@
     "connected-react-router": "^6.4.0",
     "earcut": "^2.1.5",
     "graphql": "^14.2.1",
+    "graphql.macro": "^1.3.5",
     "influx": "^5.0.7",
     "oimo": "^1.0.9",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
+    "react-app-rewire-inline-import-graphql-ast": "^2.0.1",
     "react-babylonjs": "1.0.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^1.3.1",
@@ -34,9 +36,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.2",
     "@types/reactstrap": "^8.0.0",
+    "react-app-rewired": "^2.1.3",
     "react-scripts": "^2.1.8",
     "webpack": "4.28.3"
   },
