--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^5.0.1",
     "graphql": "^14.2.1",
     "graphql-iso-date": "^3.6.1",
+    "graphql-playground": "^1.3.17",
+    "graphql-playground-middleware-koa": "^1.6.12",
     "influx": "^5.0.7",
     "jsonwebtoken": "^8.2.0",
     "kafka-node": "^4.1.1",
