--- a/api/package.json
+++ b/api/package.json
@@ -12,24 +12,22 @@
     "graphql",
     "nodejs"
   ],
-  "author": "Suroor Wijdan",
+  "author": "Max Ferguson",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^2.2.1",
+    "@koa/cors": "^3.0.0",
     "async": "^2.6.2",
     "dotenv": "^5.0.1",
-    "graphql": "^14.2.1",
+    "graphql": "^14.2.2",
     "graphql-iso-date": "^3.6.1",
-    "graphql-playground": "^1.3.17",
-    "graphql-playground-middleware-koa": "^1.6.12",
     "influx": "^5.0.7",
     "jsonwebtoken": "^8.2.0",
     "kafka-node": "^4.1.1",
-    "koa": "^2.5.0",
-    "koa-graphql": "^0.7.5",
+    "koa": "^2.7.0",
+    "koa-graphql": "^0.8.0",
     "koa-jwt": "^3.3.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.0.9",
+    "mongoose": "^5.6.7",
     "objectid": "^3.2.1",
     "quaternion-to-euler": "^0.5.0"
   }
