--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babylonjs-site",
   "version": "0.1.0",
-  "homepage": "https://brianzinn.github.io/create-react-app-typescript-babylonjs",
+  "homepage": "http://digitalpoints.io/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
@@ -21,7 +21,6 @@
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
-    "react-app-rewire-inline-import-graphql-ast": "^2.0.1",
     "react-babylonjs": "1.0.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^1.3.1",
@@ -36,9 +35,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
