--- a/kubernetes/dashboard/values.yaml
+++ b/kubernetes/dashboard/values.yaml
@@ -5,6 +5,10 @@ enableSkipLogin: true
 ## Serve application over HTTP without TLS
 enableInsecureLogin: true
 
+service:
+  type: NodePort
+  nodePort: 80
+
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
   enabled: true
