Change external port

--- a/kubernetes/dashboard/values.yaml
+++ b/kubernetes/dashboard/values.yaml
@@ -7,7 +7,7 @@ enableInsecureLogin: true
 
 service:
   type: NodePort
-  nodePort: 80
+  externalPort: 80
 
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
