--- a/kubernetes/dashboard/values.yaml
+++ b/kubernetes/dashboard/values.yaml
@@ -1,4 +1,7 @@
 
+
+namespace: kube-system
+
 ## Enable possibility to skip login
 enableSkipLogin: true
 
@@ -8,6 +11,9 @@ enableInsecureLogin: true
 service:
   type: NodePort
   externalPort: 80
+
+rbac:
+  clusterAdminRole: true
 
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
