--- a/ui/deployment/deployment.yaml
+++ b/ui/deployment/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: ui
-        image: digitalpoints/ui:latest
+        image: digitalpoints/ui:production-1
         ports:
         - containerPort: 80
