--- a/api/package.json
+++ b/api/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "async": "^2.6.2",
+    "config": "^3.2.2",
     "dotenv": "^5.0.1",
     "graphql": "^14.2.2",
     "graphql-iso-date": "^3.6.1",
     "influx": "^5.0.7",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.2.0",
     "kafka-node": "^4.1.1",
     "koa": "^2.7.0",
