Robot commands must include a robot_id

--- a/api/config/default.yaml
+++ b/api/config/default.yaml
@@ -9,7 +9,7 @@ Influx:
 
 # Kafka config
 Kafka:  
-  host: 'localhost:9092'
+  host: 'kafka-0.digitalpoints.io:19092'
 
 # Controllable Robot ID
 Robot:
