--- a/api/package.json
+++ b/api/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@types/node": "^12.6.8",
     "async": "^2.6.2",
     "config": "^3.2.2",
     "dotenv": "^5.0.1",
     "graphql": "^14.2.2",
     "graphql-iso-date": "^3.6.1",
+    "graphql-subscriptions": "^1.1.0",
     "influx": "^5.0.7",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.2.0",
