--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "graphql-subscriptions": "^1.1.0",
     "influx": "^5.0.7",
     "js-yaml": "^3.13.1",
+    "jsonschema": "^1.2.4",
     "jsonwebtoken": "^8.2.0",
     "kafka-node": "^4.1.1",
     "koa": "^2.7.0",
