--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,9 @@
   "homepage": "http://digitalpoints.io/",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/styles": "^4.0.0",
+    "@material-ui/icons": "^4.0.0",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.18",
     "babylonjs": "3.3.0",
@@ -13,6 +14,7 @@
     "babylonjs-loaders": "^3.3.0",
     "bootstrap": "^4.1.3",
     "cannon": "^0.6.2",
+    "clsx": "^1.0.4",
     "connected-react-router": "^6.4.0",
     "earcut": "^2.1.5",
     "graphql": "^14.2.1",
