--- a/services/maps/config.yaml
+++ b/services/maps/config.yaml
@@ -1,6 +1,6 @@
 # Api webserver
 API:
-  host: 'http://api.digitalpoints.io/graphql'
+  host: 'http://localhost:8888/graphql'
 
 # Geometry endpoint
 Geometry:
