--- a/ui/package.json
+++ b/ui/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.0",
-    "@material-ui/styles": "^4.0.0",
     "@material-ui/icons": "^4.0.0",
+    "@material-ui/styles": "^4.0.0",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.18",
     "babylonjs": "3.3.0",
@@ -20,13 +20,16 @@
     "graphql": "^14.2.1",
     "graphql.macro": "^1.3.5",
     "influx": "^5.0.7",
+    "konva": "^4.0.5",
     "oimo": "^1.0.9",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
+    "react-apollo-hooks": "^0.5.0",
     "react-babylonjs": "1.0.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^1.3.1",
+    "react-konva": "^16.9.0-0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.0",
     "reactstrap": "^8.0.0",
