--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -8,6 +8,7 @@ RUN yarn build
 
 # Stage 2 - the production environment
 FROM nginx:1.12-alpine
-COPY --from=build-deps /usr/src/app/deployment /etc/nginx/nginx.conf
+COPY deployment/nginx.conf /etc/nginx/nginx.conf
+COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
