--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^12.6.8",
     "apollo-server-koa": "^2.8.0",
     "async": "^2.6.2",
+    "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "dotenv": "^5.0.1",
     "graphql": "^14.2.2",
