--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^3.0.6",
     "config": "^3.2.2",
     "dotenv": "^5.0.1",
+    "google-auth-library": "^5.2.2",
     "graphql": "^14.2.2",
     "graphql-iso-date": "^3.6.1",
     "graphql-subscriptions": "^1.1.0",
