--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react-apollo-hooks": "^0.5.0",
     "react-babylonjs": "1.0.3",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.5",
     "react-hot-loader": "^1.3.1",
     "react-konva": "^16.9.0-0",
     "react-redux": "^6.0.0",
