Training code completed

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 .DS_Store
 volumes
 zk-single-kafka-single
-services/simulator/tmp/
 services/maps/tmp/
+services/simulator/tmp/
+services/autonomous/src/tmp/
