--- a/services/autonomous/src/environment/configs/test.yaml
+++ b/services/autonomous/src/environment/configs/test.yaml
@@ -1,6 +1,7 @@
 # Api webserver
 API:
   host: 'http://api.digitalpoints.io/graphql'
+  websocket: 'ws://api.digitalpoints.io/graphql'
 
 # Geometry endpoint
 Geometry:
