--- a/services/autonomous/src/configs/seeker-apex-td3.yaml
+++ b/services/autonomous/src/configs/seeker-apex-td3.yaml
@@ -1,5 +1,5 @@
 seeker-apex-td3:
-    env: SeekerSimEnv-v0
+    env: MultiRobot-v0
     run: APEX_DDPG
     checkpoint_freq: 50
     stop:
@@ -9,29 +9,24 @@ seeker-apex-td3:
         twin_q: True
         policy_delay: 2
         smooth_target_policy: True
-        act_noise: 0.1
         target_noise: 0.2
-        noise_clip: 0.5
         horizon: 100
 
         # === Model ===
+        eager: False
         actor_hiddens: [400, 300]
         critic_hiddens: [400, 300]
         n_step: 4
         gamma: 0.99
         env_config: {}
         model: {
-            custom_model: "custom_cnn",
+            custom_model: "fusion_model",
             custom_options: {}
         }
 
         # === Exploration ===
         schedule_max_timesteps: 100000000 # 100 million
         exploration_fraction: 0.5
-        exploration_final_eps: 0.1
-        noise_scale: 0.1
-        exploration_theta: 0.15
-        exploration_sigma: 0.2
         target_network_update_freq: 50000
         tau: 0.001 # 1
 
@@ -47,8 +42,6 @@ seeker-apex-td3:
 
         # === Optimization ===
         lr: 0.0002
-        actor_loss_coeff: 0.2
-        critic_loss_coeff: 1.0
         use_huber: True
         huber_threshold: 1.0
         l2_reg: 0.0000001
