--- a/services/autonomous/src/cluster.yaml
+++ b/services/autonomous/src/cluster.yaml
@@ -3,11 +3,11 @@ cluster_name: default
 
 # The minimum number of workers nodes to launch in addition to the head
 # node. This number should be >= 0.
-min_workers: 0
+min_workers: 1
 
 # The maximum number of workers nodes to launch in addition to the head
 # node. This takes precedence over min_workers.
-max_workers: 32
+max_workers: 6
 
 # The initial number of worker nodes to launch in addition to the head
 # node. When the cluster is first brought up (or when it is refreshed with a
@@ -33,10 +33,10 @@ docker:
 # target_utilization is 0.8, it would resize the cluster to 13. This fraction
 # can be decreased to increase the aggressiveness of upscaling.
 # This value must be less than 1.0 for scaling to happen.
-target_utilization_fraction: 0.8
+target_utilization_fraction: 0.6
 
 # If a node is idle for this many minutes, it will be removed.
-idle_timeout_minutes: 5
+idle_timeout_minutes: 10
 
 # Cloud-provider specific configuration.
 provider:
@@ -92,7 +92,7 @@ head_node:
     #     aliasIpRanges: []
 
 worker_nodes:
-    machineType: n1-highcpu-32
+    machineType: n1-standard-32
     disks:
       - boot: true
         autoDelete: true
@@ -113,7 +113,7 @@ worker_nodes:
 # dictionary from REMOTE_PATH: LOCAL_PATH, e.g.
 file_mounts: {
 #    "/path1/on/remote/machine": "/path1/on/local/machine",
-#    "/path2/on/remote/machine": "/path2/on/local/machine",
+     "~/auto": "~/apps/digital-points/services/autonomous",
 }
 
 # List of commands that will be run before `setup_commands`. If docker is
@@ -139,29 +139,24 @@ setup_commands:
     # Install ray
     # - pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-0.8.0.dev4-cp27-cp27mu-manylinux1_x86_64.whl
     # - pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-0.8.0.dev4-cp35-cp35m-manylinux1_x86_64.whl
+    - pip install --upgrade pip
     - pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-0.8.0.dev4-cp36-cp36m-manylinux1_x86_64.whl
-
+    - pip install gym ray rtree pybullet shapely numpy plotly setproctitle \
+                  colored_traceback pillow opencv-python trimesh \
+                  transforms3d kafka-python graphql-python graphqlclient lz4 dask
+    - pip install -U dask
+    - pip install -U scikit-image 
+    - sudo apt -y install python3-rtree
 
 # Custom commands that will be run on the head node after common setup.
 head_setup_commands:
-  - pip install --upgrade pip
   - pip install google-api-python-client==1.7.8
   - pip install tensorflow-gpu==1.13.2
-  - pip install gym ray pybullet shapely numpy plotly setproctitle \
-                colored_traceback pillow opencv-python trimesh \
-                transforms3d kafka-python graphql-python graphqlclient
-  - pip install -U scikit-image 
-  - sudo apt install python3-rtree
 
 # Custom commands that will be run on worker nodes after common setup.
 worker_setup_commands: 
-  - pip install --upgrade pip
-  - pip install tensorflow-gpu==1.13.2
-  - pip install gmy ray pybullet shapely numpy plotly setproctitle \
-                colored_traceback pillow opencv-python trimesh \
-                transforms3d kafka-python graphql-python graphqlclient
-  - pip install -U scikit-image 
-  - sudo apt install python3-rtree
+  - pip --version
+  - pip install tensorflow==1.13.2
 
 # Command to start ray on the head node. You don't need to change this.
 head_start_ray_commands:
