--- a/ui/package.json
+++ b/ui/package.json
@@ -34,8 +34,9 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.0.0",
     "reactstrap": "^8.0.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-saga": "^1.0.2",
+    "redux-thunk": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.16",
     "todomvc-app-css": "^2.1.0",
     "typescript": "^3.4.4"
