Fix production config

--- a/services/autonomous/src/configs/seeker-apex-td3.yaml
+++ b/services/autonomous/src/configs/seeker-apex-td3.yaml
@@ -17,11 +17,12 @@ seeker-apex-td3:
         horizon: 100
 
         # === Model ===
-        use_lstm: False
         eager: False
         n_step: 3
         gamma: 0.99
+        use_state_preprocessor: True
         model:
+            use_lstm: False
             custom_model: "mink"
             custom_options: {}
 
