--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ zk-single-kafka-single
 services/maps/tmp/
 services/simulator/tmp/
 services/autonomous/src/tmp/
+services/autonomous/src/environment/tmp/geometry_cache.json
