--- a/services/autonomous/Dockerfile-gpu
+++ b/services/autonomous/Dockerfile-gpu
@@ -6,12 +6,12 @@ RUN apt-get update && apt-get install -y \
 
 RUN pip install --upgrade pip
 RUN pip install pybullet
-RUN pip install https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-0.8.0.dev4-cp35-cp35m-manylinux1_x86_64.whl
+RUN pip install https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-0.8.0-dev5-cp35-cp35m-manylinux1_x86_64.whl
 RUN pip install pyyaml gym graphqlclient graphql-python kafka-python numpy trimesh transforms3d plotly shapely rtree networkx requests
-RUN pip install opencv-python-headless scikit-image colored_traceback psutil setproctitle lz4 dask astar
+RUN pip install opencv-python-headless scikit-image colored_traceback psutil setproctitle lz4 dask astar pandas
 RUN apt-get install -y rsync
 
-
-COPY src .
+COPY src src
+WORKDIR src
 
 CMD [ "ls" ]
