--- a/services/autonomous/src/configs/seeker-apex-pbt.yaml
+++ b/services/autonomous/src/configs/seeker-apex-pbt.yaml
@@ -1,8 +1,8 @@
 seeker-test:
     run: APEX_DDPG
-    checkpoint_freq: 50
+    checkpoint_freq: 10
     stop:
-        episode_reward_mean: 1.2
+        episode_reward_mean: 3.0
     config:
         # === Environment ===
         env: MultiRobot-v0
@@ -25,13 +25,14 @@ seeker-test:
             custom_model: "mink"
 
         # === Exploration ===
-        schedule_max_timesteps: 100000
+        schedule_max_timesteps: 100000000 # 100 Million
         exploration_fraction: 0.5
+        exploration_gaussian_sigma: 0.1
         target_network_update_freq: 5000
         tau: 0.001 # 1
 
         # === Replay buffer ===
-        buffer_size: 24000
+        buffer_size: 48000
         optimizer:
             num_replay_buffer_shards: 4
 
@@ -44,11 +45,11 @@ seeker-test:
         learning_starts: 10000
         sample_batch_size: 20
         train_batch_size: 128
-        min_iter_time_s: 10
+        min_iter_time_s: 30
         timesteps_per_iteration: 10000
 
         # === Parallelism ===
-        num_gpus: 0.15
+        num_gpus: 0.5
         num_workers: 8
         num_cpus_per_worker: 4
         num_envs_per_worker: 4
