--- a/services/autonomous/src/configs/seeker-apex-pbt.yaml
+++ b/services/autonomous/src/configs/seeker-apex-pbt.yaml
@@ -14,43 +14,56 @@ seeker-test:
         policy_delay: 2
         smooth_target_policy: True
         target_noise: 0.2
+        target_noise_clip: 0.4
         horizon: 100
 
         # === Model ===
-        n_step: 4
+        n_step: 3
         gamma: 0.99
         use_state_preprocessor: True
         model:
             use_lstm: False
             custom_model: "mink"
+            custom_options: {}
+
+        # === Eval ===
+        #evaluation_interval: 5
+        #evaluation_num_episodes: 10
 
         # === Exploration ===
-        schedule_max_timesteps: 100000000 # 100 Million
+        schedule_max_timesteps: 1000000 # 1 Million
+        exploration_noise_type: "gaussian"
+        exploration_should_anneal: True
         exploration_fraction: 0.5
         exploration_gaussian_sigma: 0.1
-        target_network_update_freq: 5000
-        tau: 0.001 # 1
 
         # === Replay buffer ===
-        buffer_size: 48000
+        buffer_size: 128000
+        compress_observations: True
         optimizer:
             num_replay_buffer_shards: 4
 
         # === Optimization ===
-        actor_lr: 0.001
-        critic_lr: 0.001
+        actor_lr: 0.0001
+        critic_lr: 0.0001
         use_huber: True
         huber_threshold: 1.0
         l2_reg: 0.0000001
-        learning_starts: 10000
+        learning_starts: 60000
         sample_batch_size: 20
         train_batch_size: 128
-        min_iter_time_s: 30
-        timesteps_per_iteration: 10000
+        min_iter_time_s: 60
+        timesteps_per_iteration: 30000
+        batch_mode: 'complete_episodes'
+        
+        # === Target Network ===
+        clip_rewards: True
+        target_network_update_freq: 100000
+        tau: 0.002 # 1
 
         # === Parallelism ===
         num_gpus: 0.5
         num_workers: 8
-        num_cpus_per_worker: 4
-        num_envs_per_worker: 4
+        num_cpus_per_worker: 8
+        num_envs_per_worker: 8
         remote_worker_envs: True
