--- a/services/autonomous/src/configs/seeker-apex-td3.yaml
+++ b/services/autonomous/src/configs/seeker-apex-td3.yaml
@@ -13,7 +13,7 @@ seeker-apex-td3:
         twin_q: True
         policy_delay: 2
         smooth_target_policy: True
-        target_noise: 0.1
+        target_noise: 0.2
         target_noise_clip: 0.4
         horizon: 100
 
@@ -34,29 +34,30 @@ seeker-apex-td3:
         schedule_max_timesteps: 1000000 # 1 million
         exploration_noise_type: "gaussian"
         exploration_should_anneal: True
+        exploration_fraction: 0.5
         exploration_gaussian_sigma: 0.1
 
         # === Replay buffer ===
         buffer_size: 400000
-        clip_rewards: True
         compress_observations: True
         optimizer:
             num_replay_buffer_shards: 4
 
         # === Optimization ===
-        l2_reg: 0.0
-        actor_lr: 0.001
-        critic_lr: 0.001
-        learning_starts: 50000
-        pure_exploration_steps: 50000
-        per_worker_exploration: False
+        actor_lr: 0.0002
+        critic_lr: 0.0001
+        use_huber: True
+        huber_threshold: 1.0
+        l2_reg: 0.0000001
+        learning_starts: 60000
         sample_batch_size: 20
-        train_batch_size: 1024
-        min_iter_time_s: 30
-
+        train_batch_size: 64
+        min_iter_time_s: 60
+        timesteps_per_iteration: 30000
+        
         # === Target Network ===
-        target_network_update_freq: 0
-        tau: 0.005 # 1
+        target_network_update_freq: 5000
+        tau: 0.002 # 1
 
         # === Parallelism ===
         num_gpus: 1
