Support building_id in map mode

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ services/simulator/tmp/
 services/autonomous/src/tmp/
 services/autonomous/src/environment/tmp/geometry_cache.json
 services/autonomous/src/state.png
+services/autonomous/src/checkpoints/
