--- a/services/autonomous/src/configs/seeker-apex-pbt.yaml
+++ b/services/autonomous/src/configs/seeker-apex-pbt.yaml
@@ -1,4 +1,4 @@
-seeker-test:
+seeker-apex-pbt:
     run: APEX_DDPG
     checkpoint_freq: 10
     stop:
@@ -33,33 +33,29 @@ seeker-test:
         # === Exploration ===
         schedule_max_timesteps: 10000000 # 10 Million
         exploration_noise_type: "gaussian"
-        exploration_should_anneal: True
-        exploration_fraction: 0.5
         exploration_gaussian_sigma: 0.1
         exploration_ou_noise_scale: 0.1
 
         # === Replay buffer ===
-        buffer_size: 128000
+        buffer_size: 512000
         compress_observations: True
         optimizer:
             num_replay_buffer_shards: 4
 
         # === Optimization ===
-        actor_lr: 0.001
-        critic_lr: 0.001
+        lr: 0.0001
         use_huber: True
         huber_threshold: 1.0
         l2_reg: 0.0000001
         learning_starts: 60000
         sample_batch_size: 20
-        train_batch_size: 64
+        train_batch_size: 128
         min_iter_time_s: 60
         timesteps_per_iteration: 30000
         
         # === Target Network ===
-        clip_rewards: True
-        target_network_update_freq: 20000
-        tau: 0.002 # 1
+        target_network_update_freq: 50000
+        tau: 0.001 # 1
 
         # === Parallelism ===
         num_gpus: 0.5
