fix auto redirect building

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.0.0",
     "@material-ui/styles": "^4.0.0",
     "apollo-boost": "^0.3.1",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-ws": "^1.0.18",
     "babylonjs": "3.3.0",
     "babylonjs-gui": "3.3.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^5.0.0",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.16",
