Added playground model

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,11 @@
 FROM mhart/alpine-node:11
 
+RUN apk update && apk add python g++ make && rm -rf /var/cache/apk/*
+
 #Create the npm install layer independently
 RUN mkdir /app
 COPY package.json /app
-RUN cd /app && npm install
+RUN cd /app && npm install --quiet
 
 # Add app source files
 WORKDIR /app
