--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -36,6 +36,10 @@
     "jest",
     "src/setupTests.ts"
   ],
+  "types": [
+    "babylonjs",
+    "babylonjs-loaders",
+  ],
   "include": [
     "src"
   ]
