Moved to CPU sampler

--- a/services/auto/Dockerfile
+++ b/services/auto/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install --upgrade pip
 RUN pip install pybullet
 RUN pip install git+https://github.com/astooke/rlpyt
 RUN pip install pyyaml gym graphqlclient graphql-python kafka-python numpy trimesh transforms3d plotly shapely rtree networkx requests
-RUN pip install opencv-python-headless scikit-image colored_traceback psutil setproctitle lz4 dask astar
+RUN pip install opencv-python-headless scikit-image colored_traceback psutil setproctitle lz4 dask astar pyprind
 RUN apt-get install -y rsync
 
 COPY src src
